﻿2005-07-24  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string.c, _rope.c: Add instanciation of npos for all
	compilers thanks Simon.

	* test/unit/string_test.cpp: Add creation of a reference to string::npos
	to force compiler to generate memory for it. Used to reveal a link error.

	* test/unit/cppunit/cppunit_mini.h: Removed redondant semi column in 
	CPPUNIT_TEST_SUITE_REGISTRATION macro definition.

	* stlport/config/stl_msvc.h, stl_intel.h: Concidering that compilers
	emulating MSVC compilers use the same native Standard Library headers
	macros _STLP_NEW_PLATFORM_SDK and _STLP_NO_VENDOR_STDLIB_L has been moved
	outside the _STLP_MSVC scope. _STLP_GLOBAL_NEW_HANDLER is now defined
	only for Intel compiler versions before 9.0.

	* stlport/cstdlib, stl/_cmath.h: Because of the previous remark about
	emulators of MSVC using MSVC headers, macro checks for global definition
	of C math functions has been changed from _STLP_MSVC to _MSC_VER. 
	

2005-07-23  Michael Fink  <vividos@users.sourceforge...>

	* test/unit/locale_test.cpp: Added creating locale pointer in
	test_supported_locale() when no exception handling is available.

	* src/stlport.rc: Added version info defines when not available through
	windows.h. Happens on evc3 MIPS and evc3 SH3.

2005-07-23  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string_sum.h: Fix missing return statement in a compare
	method.

2005-07-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/_algo.c: Fix search_n implementation for random access
	iterator thanks Jim Xochellis

	* test/unit/algo_test.cpp: Add test case for the previous bug thanks
	Michael Fink.

	* src/num_get_float.cpp: Fix gcc Mingwin and Cygwin special version with
	building with -O2 option.

	* build/Makefiles/gmake/gcc.mak: Add -D_REENTRANT definition for cygwin and
	-mthreads for mingwin platform to make STLport thread safe like under the
	other supported platforms.


2005-06-30  Petr Ovtchenkov  <ptr@island...>
