@@ -456,19 +456,19 @@ Operational environment:        Windows CE 3.0 Pocket PC 2002 (iPAQ h3950)
 -----------------------------------------------------------------------
 Compiler:                       eMbedded Visual C++ 3.0
 -----------------------------------------------------------------------
-Date:                           2005-04-13
+Date:                           2005-07-25
 STLP Version:                   current CVS STLPORT_5_0 branch
 Reporter:                       mfink (Michael Fink)
-Status (release-shared):        All pass (316 tests)
+Status (release-shared):        All pass (321 tests)
 Notes:
-Status (dbg-shared):            All pass (316 tests)
+Status (dbg-shared):            All pass (321 tests)
 Notes:
 Status (stldbg-shared):         Runtime failure
 Notes:                          Fails probably due to a bug in the ARM
                                 compiler
-Status (release-static):        All pass (316 tests)
+Status (release-static):        All pass (321 tests)
 Notes:
-Status (dbg-static):            All pass (316 tests)
+Status (dbg-static):            All pass (321 tests)
 Notes:
 Status (stldbg-static):         Runtime failure
 Notes:                          Idem stldbg-shared
@@ -480,20 +480,20 @@ Operational environment:        Windows CE 3.0 Pocket PC 2002 Emulator
 -----------------------------------------------------------------------
 Compiler:                       eMbedded Visual C++ 3.0
 -----------------------------------------------------------------------
-Date:                           2005-04-13
+Date:                           2005-07-25
 STLP Version:                   current CVS STLPORT_5_0 branch
 Reporter:                       mfink (Michael Fink)
-Status (release-shared):        All pass (316 tests)
+Status (release-shared):        All pass (321 tests)
 Notes:
-Status (dbg-shared):            All pass (316 tests)
+Status (dbg-shared):            All pass (321 tests)
 Notes:
-Status (stldbg-shared):         All pass (316 tests)
+Status (stldbg-shared):         All pass (321 tests)
 Notes:
-Status (release-static):        All pass (316 tests)
+Status (release-static):        All pass (321 tests)
 Notes:
-Status (dbg-static):            All pass (316 tests)
+Status (dbg-static):            All pass (321 tests)
 Notes:
-Status (stldbg-static):         All pass (316 tests)
+Status (stldbg-static):         All pass (321 tests)
 Notes:
 
 =======================================================================
@@ -503,19 +503,19 @@ Operational environment:        Windows CE 4.2 Pocket PC 2003 (iPAQ h6340)
 -----------------------------------------------------------------------
 Compiler:                       eMbedded Visual C++ .NET SP4
 -----------------------------------------------------------------------
-Date:                           2005-02-16
+Date:                           2005-07-25
 STLP Version:                   current CVS STLPORT_5_0 branch
 Reporter:                       mfink (Michael Fink)
-Status (release-shared):        All pass (313 tests)
+Status (release-shared):        All pass (322 tests)
 Notes:
-Status (dbg-shared):            All pass (313 tests)
+Status (dbg-shared):            All pass (322 tests)
 Notes:
 Status (stldbg-shared):         Runtime failure
 Notes:                          refuses to start, maybe same problem
                                 as under eVC3/ARM
-Status (release-static):        All pass (313 tests)
+Status (release-static):        All pass (322 tests)
 Notes:
-Status (dbg-static):            All pass (313 tests)
+Status (dbg-static):            All pass (322 tests)
 Notes:
 Status (stldbg-static):         Runtime failure
 Notes:                          Idem stldbg-shared
@@ -551,14 +551,14 @@ Operational environment:        Microsoft Device Emulator V1.0 Windows
 -----------------------------------------------------------------------
 Compiler:                       eMbedded Visual C++ .NET SP4
 -----------------------------------------------------------------------
-Date:                           2005-06-03
+Date:                           2005-07-25
 STLP Version:                   current CVS STLPORT_5_0 branch
 Reporter:                       mfink (Michael Fink)
-Status (release-shared):        All pass (321 tests)
+Status (release-shared):        All pass (322 tests)
 Notes:
-Status (dbg-shared):            All pass (321 tests)
+Status (dbg-shared):            All pass (322 tests)
 Notes:
-Status (release-static):        All pass (321 tests)
+Status (release-static):        All pass (322 tests)
 Notes:
-Status (dbg-static):            All pass (321 tests)
+Status (dbg-static):            All pass (322 tests)
 Notes:
